# Multilayer-Perceptron

./: MultiLayerPerceptron.py  README.md  main.py  pyproject.toml  setup.sh
data/: test.csv  test2.csv  test_NaN.csv  test_malformed.csv
mlp/: activations.py  loss.py  mlp.py  preprocessor.py  utils.py
saved_models/: mlp_model.npz
visualize/: correlation_plot.py  describe.py  pair_plot.py  results_plot.py
